--- a/data/qids/Q562540/journal/manifest.json
+++ b/data/qids/Q562540/journal/manifest.json
@@ -26,7 +26,7 @@
     },
     "items": [
         {
-            "id": "https:\/\/404mike.github.io\/nel_results\/data\/qids\/Q562540\/journal\/llgc-id1311205_llgc-id1312250.json",
+            "id": "https:\/\/damsssl.llgc.org.uk\/iiif\/2.0\/4627582\/manifest.json",
             "type": "Manifest",
             "label": {
                 "en": [
