--- a/data/qids/Q562540/journal/manifest.json
+++ b/data/qids/Q562540/journal/manifest.json
@@ -26,11 +26,20 @@
     },
     "items": [
         {
-            "id": "https:\/\/damsssl.llgc.org.uk\/iiif\/2.0\/4627582\/manifest.json",
+            "id": "https:\/\/404mike.github.io\/nel_results\/data\/qids\/Q562540\/journal\/llgc-id1311205_llgc-id1312250.json",
             "type": "Manifest",
             "label": {
                 "en": [
                     "1915-11-01"
+                ]
+            }
+        },
+        {
+            "id": "https:\/\/404mike.github.io\/nel_results\/data\/qids\/Q562540\/journal\/llgc-id1277425_llgc-id1283175.json",
+            "type": "Manifest",
+            "label": {
+                "en": [
+                    "1967-12-01"
                 ]
             }
         }
