--- a/data/qids/Q562540/manifest.json
+++ b/data/qids/Q562540/manifest.json
@@ -7,9 +7,6 @@
             "Collections for Augustus John"
         ]
     },
-    "behavior": [
-        "multi-part"
-    ],
     "summary": {
         "en": [
             "Collection Summary for Augustus John"
@@ -34,6 +31,15 @@
             "label": {
                 "en": [
                     "journal articles"
+                ]
+            }
+        },
+        {
+            "id": "https:\/\/404mike.github.io\/nel_results\/data\/qids\/Q562540\/newspaper\/manifest.json",
+            "type": "Manifest",
+            "label": {
+                "en": [
+                    "newspaper articles"
                 ]
             }
         }
