--- a/data/qids/Q562540/journal/manifest.json
+++ b/data/qids/Q562540/journal/manifest.json
@@ -27,7 +27,7 @@
     "items": [
         {
             "id": "https:\/\/404mike.github.io\/nel_results\/data\/qids\/Q562540\/journal\/llgc-id1311205_llgc-id1312250.json",
-            "type": "Manifest",
+            "type": "Collection",
             "label": {
                 "en": [
                     "1915-11-01"
@@ -36,7 +36,7 @@
         },
         {
             "id": "https:\/\/404mike.github.io\/nel_results\/data\/qids\/Q562540\/journal\/llgc-id1277425_llgc-id1283175.json",
-            "type": "Manifest",
+            "type": "Collection",
             "label": {
                 "en": [
                     "1967-12-01"
